--- a/style2-1.css
+++ b/style2-1.css
@@ -4,7 +4,7 @@
                 'Hiragino Kaku Gothic Pro', sans-serif}
 
 /* サイト名 */
-  .site h1 a    {color: #000000;
+  .site h1 a    {color: #FFFFFF;
                 text-decoration: none}
   .site h1      {margin: 0;
                 font-size: 30px}
